Add header, flash and footer to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<%= yield %>
+  <%= render 'layouts/header' %>
+  <%= render :partial => 'layouts/flash', :object => flash %>
+
+  <%= yield %>
+
+  <%= render 'layouts/footer' %>
 
 </body>
 </html>
