--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ParkRent</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <meta charset="utf-8">
+  <title><%= page_title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <%= stylesheet_link_tag :application, "data-turbolinks-track" => true %>
+
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-57-precomposed.png">
+  <%= favicon_link_tag %>
+
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-view="<%= body_class %>">
+  <div class="container" id="wrapper" role="document">
+    <%= render 'layouts/header' %>
+    <%= render :partial => 'layouts/flash', :object => flash %>
 
-  <%= render 'layouts/header' %>
-  <%= render :partial => 'layouts/flash', :object => flash %>
+    <%= yield %>
 
-  <%= yield %>
+    <%= render 'layouts/footer' %>
+  </div><!-- /#wrapper -->
 
-  <%= render 'layouts/footer' %>
-
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" %>
+  <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js" %>
 </body>
 </html>
