--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -1,27 +1,7 @@
 <h1>Listing line_items</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Quantity</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<%= render partial: 'line_item_listing', collection: @line_items, as: :line_item %>
 
-  <tbody>
-    <% @line_items.each do |line_item| %>
-      <tr>
-        <td><%= line_item.quantity %></td>
-        <td><%= link_to 'Show', line_item %></td>
-        <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
-        <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<hr>
 
 <%= link_to 'New Line item', new_line_item_path %>
