--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Quantity:</strong>
-  <%= @line_item.quantity %>
-</p>
+<%= render @line_item %>
 
 <%= link_to 'Edit', edit_line_item_path(@line_item) %> |
 <%= link_to 'Back', line_items_path %>
