--- a/app/views/rents/show.html.erb
+++ b/app/views/rents/show.html.erb
@@ -1,4 +1,4 @@
 <%= render @rent %>
 
-<%= link_to 'Edit', edit_rent_path(@rent) %> |
-<%= link_to 'Back', rents_path %>
+<%= link_to 'Edit', edit_parking_rent_path(@parking, @rent) %> |
+<%= link_to 'Back', parking_rents_path(@parking) %>
