--- a/app/views/rents/edit.html.erb
+++ b/app/views/rents/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @rent %> |
-<%= link_to 'Back', rents_path %>
+<%= link_to 'Show', parking_rent_path(@parking, @rent) %> |
+<%= link_to 'Back', parking_rents_path(@parking) %>
