Accept rent attributes on Order

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,6 @@
 <%= simple_form_for @order do |f| %>
 
+  <%= f.association :rent %>
+
   <%= f.button :submit, :class => 'btn btn-primary' %>
 <% end %>
