--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,14 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= render @payment %>
 
-<p>
-  <strong>Amount:</strong>
-  <%= @payment.amount %>
-</p>
-
-<p>
-  <strong>Type:</strong>
-  <%= @payment.type %>
-</p>
-
-<%= link_to 'Edit', edit_payment_path(@payment) %> |
-<%= link_to 'Back', payments_path %>
+<%= link_to 'Edit', edit_order_payment_path(@payment) %> |
+<%= link_to 'Back', orders_path(@order) %>
