Give some love to the website's footer

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -14,3 +14,20 @@
 body {
   padding-top: 50 + @grid-gutter-width;
 }
+
+// Footer
+// -------------------------
+
+.footer {
+  padding-top: @grid-gutter-width;
+  padding-bottom: @grid-gutter-width;
+  border-top: 1px solid @hr-border;
+}
+
+.footer-links {
+  margin: @grid-gutter-width/2 0;
+  li {
+    display: inline;
+    padding: 0 @grid-gutter-width/10;
+  }
+}
