--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,23 @@
-<footer></footer>
+<footer class="footer">
+  <div class="container"
+
+    <div class="row">
+      <div class="col col-lg-6 col-offset-3">
+        <ul class="footer-links text-center">
+          <li>
+            <a href="#">How it works</a>
+          </li>
+          <li class="muted">·</li>
+          <li>
+            <a href="#">Terms of service</a>
+          </li>
+          <li class="muted">·</li>
+          <li>
+            <a href="#">Privacy policy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</footer>
