Give some love to the website's frontpage

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -15,6 +15,29 @@ body {
   padding-top: 50 + @grid-gutter-width;
 }
 
+section {
+  padding-top: @grid-gutter-width;
+  padding-bottom: @grid-gutter-width * 2;
+  border-bottom: 1px solid @hr-border;
+}
+
+
+// Header
+// -------------------------
+
+.header {
+  padding-bottom: @grid-gutter-width;
+}
+
+// Navigation
+
+.navbar {
+  border-radius: 0px;
+  border-bottom: 1px solid @hr-border;
+}
+.navbar .nav > li > a { border-radius: 2px; }
+
+
 // Footer
 // -------------------------
 
