Give some love to the website's header

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -12,7 +12,15 @@
 @import "bootstrap/mixins";
 
 body {
-  padding-top: 50 + @grid-gutter-width;
+  padding-top: @grid-gutter-width;
+}
+
+
+// Header
+// -------------------------
+
+.header {
+  padding-bottom: @grid-gutter-width;
 }
 
 section {
