--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,26 @@
-<header></header>
+<header class="header">
+
+  <div class="navbar">
+    <div class="container">
+
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <%= link_to 'ParkRent', root_path, :class => 'navbar-brand' %>
+
+      <div class="nav-collapse collapse navbar-responsive-collapse">
+
+        <ul class="nav navbar-nav">
+          <li>
+            <%= link_to 'Find parkings', parkings_path %>
+          </li>
+        </ul>
+
+      </div><!-- /.nav-collapse -->
+    </div><!-- /.container -->
+  </div><!-- /.navbar -->
+
+</header>
