--- a/app/views/rents/_form.html.erb
+++ b/app/views/rents/_form.html.erb
@@ -2,9 +2,9 @@
 
     <%= f.input :price %>
 
-    <%= f.input :beginning %>
+    <%= f.input :beginning, as: :string, input_html: { class: 'datepicker' } %>
 
-    <%= f.input :termination %>
+    <%= f.input :termination, as: :string, input_html: { class: 'datepicker' } %>
 
     <%= f.button :submit, :class => 'btn btn-primary' %>
 <% end %>
