Typo: beggining -> begining

--- a/app/views/frontpage/frontpage.html.erb
+++ b/app/views/frontpage/frontpage.html.erb
@@ -31,7 +31,7 @@
           <label>Location</label>
           <input type="text" placeholder="Start typing…">
 
-          <label>Beggining</label>
+          <label>Beginning</label>
           <input type="text" placeholder="">
 
           <label>Termination</label>
