Add Parking searching feature

--- a/app/views/frontpage/frontpage.html.erb
+++ b/app/views/frontpage/frontpage.html.erb
@@ -54,32 +54,7 @@
 </section>
 
 <section>
-  <div class="row">
-    <div class="col col-lg-8 col-offset-2">
-      <h2 class="text-center">Find parkings</h2>
-
-      <div class="row">
-        <form>
-          <div class="col col-lg-6">
-            <input type="text" placeholder="Location">
-          </div>
-
-          <div class="col col-lg-2">
-            <input type="text" placeholder="Beggining">
-          </div>
-
-          <div class="col col-lg-2">
-            <input type="text" placeholder="Termination">
-          </div>
-
-          <div class="col col-lg-2">
-            <button class="btn btn-default" type="button">Search</button>
-          </div>
-        </form>
-      </div>
-
-    </div>
-  </div><!-- /.row -->
+  <%= render 'parkings/search_form' %>
 </section>
 
 <section>
