--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,15 +11,18 @@
 
       <%= link_to 'ParkRent', root_path, :class => 'navbar-brand' %>
 
-      <div class="nav-collapse collapse navbar-responsive-collapse">
+      <div class="nav-collapse collapse navbar-responsive-collapse"></div><!-- /.nav-collapse -->
 
-        <ul class="nav navbar-nav">
-          <li>
-            <%= link_to 'Find parkings', parkings_path %>
-          </li>
-        </ul>
+      <p class="navbar-text pull-right">
+        <% if user_signed_in? %>
+          <%= t('layout.header.greeting') %>
+          <%= link_to current_user.flexible_name, edit_user_registration_path, :class => 'navbar-link' %>
+          <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'Login', new_user_session_path %>
+        <% end %>
+      </p>
 
-      </div><!-- /.nav-collapse -->
     </div><!-- /.container -->
   </div><!-- /.navbar -->
 
