--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,9 @@
 
   <%= render 'layouts/footer' %>
 
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" %>
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js" %>
+  <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
+  <%= yield :scripts %>
 </body>
 </html>
