--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New order</h1>
 
+<%= render partial: 'rents/rent_listing', collection: [@rent], as: :rent %>
+
+<hr>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', orders_path %>
