--- a/app/views/rents/_rent_listing.html.erb
+++ b/app/views/rents/_rent_listing.html.erb
@@ -8,6 +8,7 @@
   </ul>
 
   <footer>
+    <%= link_to 'Rent', new_order_path(rent_id: rent.id) %>
     <%= link_to 'Edit', edit_parking_rent_path(rent.parking, rent) %>
     <%= link_to 'Destroy', parking_rent_path(rent.parking, rent), method: :delete, data: { confirm: 'Are you sure?' } %>
   </footer>
