--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       <p class="navbar-text pull-right">
         <% if user_signed_in? %>
           <%= t('layout.header.greeting') %>
-          <%= link_to current_user.flexible_name, edit_user_registration_path, :class => 'navbar-link' %>
+          <%= link_to current_user.full_name, edit_user_registration_path, :class => 'navbar-link' %>
           <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'Login', new_user_session_path %>
