--- a/app/views/parkings/_search_form.html.erb
+++ b/app/views/parkings/_search_form.html.erb
@@ -22,7 +22,7 @@
         </div>
 
         <div class="col col-lg-2">
-          <%= f.button :submit, 'Search', :class => 'btn btn-default' %>
+          <%= f.button :submit, 'Search', :disable_with => 'Please wait ...', :class => 'btn btn-default' %>
         </div>
       <% end %>
     </div>
