--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -2,5 +2,5 @@
 
   <%= f.input :amount %>
 
-  <%= f.button :submit, :class => 'btn btn-primary' %>
+  <%= f.button :submit, :disable_with => 'Please wait ...', :class => 'btn btn-primary' %>
 <% end %>
