--- a/app/views/rents/_form.html.erb
+++ b/app/views/rents/_form.html.erb
@@ -6,5 +6,5 @@
 
     <%= f.input :termination, as: :string, input_html: { class: 'datepicker' } %>
 
-    <%= f.button :submit, :class => 'btn btn-primary' %>
+    <%= f.button :submit, :disable_with => 'Please wait ...', :class => 'btn btn-primary' %>
 <% end %>
