Add a short parkings search form

--- a/app/views/frontpage/frontpage.html.erb
+++ b/app/views/frontpage/frontpage.html.erb
@@ -10,7 +10,7 @@
 </section>
 
 <section>
-  <%= render 'parkings/search_form' %>
+  <%= render 'parkings/short_search_form' %>
 </section>
 
 <section>
