--- a/app/views/frontpage/frontpage.html.erb
+++ b/app/views/frontpage/frontpage.html.erb
@@ -1,54 +1,31 @@
 <section>
   <div class="row">
+
     <div class="col col-lg-6">
       <h1>Rent your parking while you're away</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, a, quod corporis eius ipsum magnam veniam amet porro.</p>
+
+      <div class="row">
+
+        <hr>
+
+        <div class="col col-lg-2">
+          <img src="http://www.placehold.it/120" class="img-thumbnail">
+        </div>
+        <div class="col col-lg-4">
+          <h5>Kent Nagano</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum.</p>
+        </div>
+      </div><!-- .row -->
     </div>
 
-    <%= render 'onboardings/form' %>
+    <div class="col col-lg-6">
+      <%= render 'onboardings/form' %>
+    </div>
+
   </div><!-- /.row -->
 </section>
 
 <section>
   <%= render 'parkings/short_search_form' %>
-</section>
-
-<section>
-  <div class="row">
-    <div class="col col-lg-4">
-      <div class="row">
-        <div class="col col-lg-3">
-          <img src="http://www.placehold.it/120" class="img-thumbnail">
-        </div>
-        <div class="col col-lg-8">
-          <h5>Kent Nagano</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col col-lg-4">
-      <div class="row">
-        <div class="col col-lg-3">
-          <img src="http://www.placehold.it/120" class="img-thumbnail">
-        </div>
-        <div class="col col-lg-8">
-          <h5>Kent Nagano</h5>
-          <p>Consectetur adipisicing elit. Harum, asperiores, aperiam exceptur.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col col-lg-4">
-      <div class="row">
-        <div class="col col-lg-3">
-          <img src="http://www.placehold.it/120" class="img-thumbnail">
-        </div>
-        <div class="col col-lg-8">
-          <h5>Kent Nagano</h5>
-          <p>Lorem ipsum harum, asperiores, aperiam exceptur.</p>
-        </div>
-      </div>
-    </div>
-  </div><!-- /.row -->
 </section>
