Add a 'new rental' link on parkings #show

--- a/app/views/parkings/show.html.erb
+++ b/app/views/parkings/show.html.erb
@@ -1,4 +1,5 @@
 <%= render @parking %>
 
+<%= link_to 'New rental', new_parking_rent_path(@parking) %> |
 <%= link_to 'Edit', edit_parking_path(@parking) %> |
 <%= link_to 'Back', parkings_path %>
