--- a/app/views/onboardings/_form.html.erb
+++ b/app/views/onboardings/_form.html.erb
@@ -21,9 +21,9 @@
 
         <%= f.input :location, placeholder: 'location'  %>
 
-        <%= f.input :beginning, placeholder: 'beginning', input_html: { class: 'datepicker' } %>
+        <%= f.input :beginning, placeholder: 'beginning', input_html: { :class => 'js-datepicker' } %>
 
-        <%= f.input :termination, placeholder: 'termination', input_html: { class: 'datepicker' } %>
+        <%= f.input :termination, placeholder: 'termination', input_html: { :class => 'js-datepicker' } %>
 
         <%= f.input :price, placeholder: 'price' %>
 
