--- a/app/views/parkings/_search_form.html.erb
+++ b/app/views/parkings/_search_form.html.erb
@@ -8,11 +8,11 @@
 
           Search for parkings near <%= f.input :location, wrapper: false, input_html: { :class => 'form-control col-lg-6 transparent' }, placeholder: 'Québec, Grand Théâtre ...', label: false %>
 
-          <%= f.input :distance,    input_html: { :class => 'transparent' }, placeholder: 'distance', label: false %>
+          <%= f.input :distance,    input_html: { :class => 'transparent' }, placeholder: 'distance', label: false, required: false %>
 
-          <%= f.input :begining,    input_html: { :class => 'transparent datepicker' }, placeholder: 'begining', label: false %>
+          <%= f.input :begining,    input_html: { :class => 'transparent js-datepicker' }, placeholder: 'begining', label: false, required: false %>
 
-          <%= f.input :termination, input_html: { :class => 'transparent datepicker' }, placeholder: 'termination', label: false %>
+          <%= f.input :termination, input_html: { :class => 'transparent js-datepicker' }, placeholder: 'termination', label: false, required: false %>
 
           <%= f.button :submit, 'Search', :disable_with => 'Please wait ...', :class => 'btn btn-default' %>
         <% end %>
