--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
   <%= render 'layouts/footer' %>
 
   <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" %>
+  <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places&sensor=false" %>
+
   <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
   <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js" %>
 </body>
