--- a/app/views/parkings/_short_search_form.html.erb
+++ b/app/views/parkings/_short_search_form.html.erb
@@ -2,17 +2,16 @@
   <div class="col col-lg-8 col-offset-2">
 
     <div class="row">
-      <div class="col col-lg-8 col-offset-2">
+      <%= simple_form_for :search, url: parkings_path, method: :get, html: { :class => 'form-inline' } do |f| %>
+        <div class="col col-lg-6 col-offset-2">
+          <%= f.input :location, wrapper: false, input_html: { :class => 'form-control transparent js-geocomplete', :autocomplete => false }, placeholder: 'Québec, Montréal, ...', label: false %>
+        </div>
 
-        <%= simple_form_for :search, url: parkings_path, method: :get, html: { :class => 'form-inline' } do |f| %>
-
-          Search for parkings near <%= f.input :location, wrapper: false, input_html: { :class => 'form-control col-lg-6 transparent js-geocomplete', :autocomplete => false }, placeholder: 'Québec, Grand Théâtre ...', label: false %>
-
-          <%= f.button :submit, 'Search', :disable_with => 'Please wait ...', :class => 'btn btn-default' %>
-        <% end %>
-
-      </div>
-    </div>
+        <div class="col col-lg-2">
+          <%= f.button :submit, 'Search', :disable_with => 'Please wait ...', :class => 'btn btn-default btn-block' %>
+        </div>
+      <% end %>
+    </div><!-- /.row -->
 
   </div>
 </div><!-- /.row -->
