Update :disable_with form builder option with rails 4.0 syntax

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", :disable_with => 'Please wait ...' %>
+    <%= f.button :submit, "Sign up", data: { disable_with: 'Please wait ...' } %>
   </div>
 <% end %>
 
