--- a/app/views/onboardings/_password_form.html.erb
+++ b/app/views/onboardings/_password_form.html.erb
@@ -15,5 +15,5 @@
 
   <hr>
 
-  <%= f.button :submit, 'Create listing', :disable_with => 'Please wait ...', :class => 'btn btn-primary btn-block' %>
+  <%= f.button :submit, 'Create listing', data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary btn-block' %>
 <% end %>
