--- a/app/views/parkings/_short_search_form.html.erb
+++ b/app/views/parkings/_short_search_form.html.erb
@@ -8,7 +8,7 @@
         </div>
 
         <div class="col col-lg-2">
-          <%= f.button :submit, 'Search', :disable_with => 'Please wait ...', :class => 'btn btn-default btn-block' %>
+          <%= f.button :submit, 'Search', data: { disable_with: 'Please wait ...' }, :class => 'btn btn-default btn-block' %>
         </div>
       <% end %>
     </div><!-- /.row -->
