--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update", :disable_with => 'Please wait ...' %>
+    <%= f.button :submit, "Update", data: { disable_with: 'Please wait ...' } %>
   </div>
 <% end %>
 
