--- a/app/views/onboardings/_form.html.erb
+++ b/app/views/onboardings/_form.html.erb
@@ -31,7 +31,7 @@
 
       <hr>
 
-      <%= f.button :submit, 'Create listing', :disable_with => 'Please wait ...', :class => 'btn btn-primary btn-block' %>
+      <%= f.button :submit, 'Create listing', data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary btn-block' %>
     </div>
 
   <% end %>
