--- a/app/views/parkings/_form.html.erb
+++ b/app/views/parkings/_form.html.erb
@@ -14,5 +14,5 @@
 
   <hr>
 
-  <%= f.button :submit, :disable_with => 'Please wait ...', :class => 'btn btn-primary' %>
+  <%= f.button :submit, data: { disable_with: 'Please wait ...' }, :class => 'btn btn-primary' %>
 <% end %>
