--- a/app/views/onboardings/new.html.erb
+++ b/app/views/onboardings/new.html.erb
@@ -1,10 +1,20 @@
 <div class="row">
-  <div class="col col-lg-6">
-    <h1>You're almost done! </h1>
-    <p>Now create a password to securely access your account.</p>
-  </div>
+  <% if @onboarding.can_assign_credential? %>
+    <div class="col col-lg-6">
+      <h1>You're almost done! </h1>
+      <p>Now create a password to securely access your account.</p>
+    </div>
 
-  <div class="col col-lg-4">
-    <%= render 'password_form' %>
-  </div>
-</div>
+    <div class="col col-lg-4">
+      <%= render 'password_form' %>
+    </div>
+  <% else %>
+    <div class="col col-lg-6">
+      <h1>Hold on!</h1>
+      <p>Something looks wrong.</p>
+    </div>
+    <div class="col col-lg-6">
+      <%= render 'form' %>
+    </div>
+  <% end %>
+</div><!-- /.row -->
