Add basic mapbox map to parkings

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -65,6 +65,15 @@ input.transparent {
 }
 
 
+// Maps
+// -------------------------
+
+.map {
+  width: 100%;
+  height: 500px;
+}
+
+
 // Footer
 // -------------------------
 
