--- a/app/views/parkings/_parking.html.erb
+++ b/app/views/parkings/_parking.html.erb
@@ -20,6 +20,9 @@
       <header>
         <h1><%= parking.location %></h1>
       </header>
+
+      <div class="map js-mapbox" data-lat="<%= parking.latitude %>" data-lon="<%= parking.longitude %>" data-zoom="5"></div>
+
     </div>
   </div><!-- /.col -->
 
