Use explicit routing helper
Fixes a Cross Site Scriptin Brakeman warning

--- a/app/views/parkings/edit.html.erb
+++ b/app/views/parkings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @parking %> |
+<%= link_to 'Show', parking_path(@parking) %> |
 <%= link_to 'Back', parkings_path %>
