--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @order %> |
+<%= link_to 'Show', order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
