--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,6 @@
   <%= javascript_include_tag "//api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js" %>
 
   <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js" %>
+  <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js" %>
 </body>
 </html>
