Update deprecated Bootstrap 3.0.0rc1 classes

--- a/app/views/parkings/_search_form.html.erb
+++ b/app/views/parkings/_search_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col col-lg-10 col-offset-1">
+  <div class="col col-lg-10 col-lg-offset-1">
 
     <div class="row">
       <%= simple_form_for :search, url: parkings_path, method: :get, html: { :class => 'form-inline' } do |f| %>
