--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container"
 
     <div class="row">
-      <div class="col col-lg-6 col-offset-3">
+      <div class="col col-lg-6 col-lg-offset-3">
         <ul class="footer-links text-center">
           <li>
             <a href="#">How it works</a>
