--- a/app/views/parkings/_short_search_form.html.erb
+++ b/app/views/parkings/_short_search_form.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col col-lg-8 col-offset-2">
+  <div class="col col-lg-8 col-lg-offset-2">
 
     <div class="row">
       <%= simple_form_for :search, url: parkings_path, method: :get, html: { :class => 'form-inline' } do |f| %>
-        <div class="col col-lg-6 col-offset-2">
+        <div class="col col-lg-6 col-lg-offset-2">
           <%= f.input :location, wrapper: false, input_html: { :class => 'form-control transparent js-geocomplete', :autocomplete => false }, placeholder: 'Québec, Montréal, ...', label: false %>
         </div>
 
