--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 <body data-view="<%= body_class %>">
   <div class="container" id="wrapper" role="document">
     <%= render 'layouts/header' %>
-    <%= render :partial => 'layouts/flash', :object => flash %>
+    <%= bootstrap_flash %>
 
     <%= yield %>
   </div><!-- /#wrapper -->
