Update header navbar to Bootstrap 3

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -33,9 +33,13 @@ section {
 
 .navbar {
   border-radius: 0px;
-  border-bottom: 1px solid @hr-border;
 }
-.navbar .nav > li > a { border-radius: 2px; }
+
+.navbar-default {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid @navbar-default-border;
+}
 
 
 // Forms
