--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,18 @@
 <header class="header">
 
-  <div class="navbar">
-    <div class="container">
+  <nav class="navbar navbar-default" role="navigation">
 
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
       <%= link_to 'ParkRent', root_path, :class => 'navbar-brand' %>
+    </div>
 
-      <div class="nav-collapse collapse navbar-responsive-collapse"></div><!-- /.nav-collapse -->
-
+    <div class="collapse navbar-collapse">
       <p class="navbar-text pull-right">
         <% if user_signed_in? %>
           <%= t('layout.header.greeting') %>
@@ -23,7 +23,7 @@
         <% end %>
       </p>
 
-    </div><!-- /.container -->
-  </div><!-- /.navbar -->
+    </div><!-- /.navbar-collapse -->
+  </nav>
 
 </header>
