--- a/app/views/parkings/edit.html.erb
+++ b/app/views/parkings/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', parking_path(@parking) %> |
-<%= link_to 'Back', parkings_path %>
+<%= link_to 'Dashboard', root_path %>
