--- a/app/views/vehicles/_fields.html.erb
+++ b/app/views/vehicles/_fields.html.erb
@@ -1,5 +1,5 @@
 <%= f.input :license_plate %>
 
-<%= f.input :year, start_year: Date.current.year - 15, end_year: Date.current.year, discard_month: true, discard_day: true %>
+<%= f.input :year, start_year: Date.current.year - 15, end_year: Date.current.year, discard_month: true, discard_day: true, prompt: 'Select a year' %>
 
 <%= f.input :model %>
