--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
+<%= link_to 'Destroy', vehicle_path(@vehicle), method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to 'Back', root_path %>
