--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,21 +1,21 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.input :email, autofocus: true, required: true, input_html: { :class => 'transparent' } %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :first_name, :required => false %>
-    <%= f.input :last_name, :required => false %>
-    <%= f.input :phone_number, :required => false %>
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+    <%= f.input :first_name,   required: false, placeholder: 'First name',   input_html: { :class => 'transparent' } %>
+    <%= f.input :last_name,    required: false, placeholder: 'Last name',    input_html: { :class => 'transparent' } %>
+    <%= f.input :phone_number, required: false, placeholder: 'Phone number', input_html: { :class => 'transparent' } %>
+    <%= f.input :password,     required: false, placeholder: 'Password', autocomplete: "off", hint: "leave it blank if you don't want to change it", input_html: { :class => 'transparent' } %>
+    <%= f.input :password_confirmation, required: false, placeholder: 'Password confirmation', input_html: { :class => 'transparent' } %>
+    <%= f.input :current_password,      required: true,  placeholder: 'Current password', hint: "we need your current password to confirm your changes" %>
   </div>
 
   <div class="form-actions">
@@ -25,6 +25,6 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
