--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,17 @@
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
+  defaults: { label: false, input_html: { :class => 'transparent' }}) do |f| %>
+
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name,   autofocus: true, required: true, label: false, placeholder: 'First name',    input_html: { :class => 'transparent' } %>
-    <%= f.input :last_name,                     required: true, label: false, placeholder: 'Last name',     input_html: { :class => 'transparent' } %>
-    <%= f.input :phone_number,                  required: true, label: false, placeholder: 'Phone number',  input_html: { :class => 'transparent' } %>
-    <%= f.input :email,                         required: true, label: false, placeholder: 'Email',         input_html: { :class => 'transparent' } %>
-    <%= f.input :password,                      required: true, label: false, placeholder: 'Password',      input_html: { :class => 'transparent' } %>
-    <%= f.input :password_confirmation,         required: true, label: false, placeholder: 'Password confirmation', input_html: { :class => 'transparent' } %>
+    <%= f.input :first_name,   autofocus: true, required: true, placeholder: 'First name' %>
+    <%= f.input :last_name,                     required: true, placeholder: 'Last name' %>
+    <%= f.input :phone_number,                  required: true, placeholder: 'Phone number' %>
+    <%= f.input :email,                         required: true, placeholder: 'Email' %>
+    <%= f.input :password,                      required: true, placeholder: 'Password' %>
+    <%= f.input :password_confirmation,         required: true, placeholder: 'Password confirmation' %>
   </div>
 
   <div class="form-actions">
