--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 
     <div class="collapse navbar-collapse">
       <p class="navbar-text pull-right">
-        <% if user_signed_in? %>
+        <% if current_user.authenticated? %>
           <%= t('layout.header.greeting') %>
           <%= link_to current_user.full_name, edit_user_registration_path, :class => 'navbar-link' %>
           <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
