--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,18 +1,15 @@
 <h2>Resend confirmation instructions</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name),
-  html: { method: :post },
-  defaults: { input_html: { :class => 'transparent' }) do |f| %>
-
+<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, :required => true, :autofocus => true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions", data: { disable_with: 'Please wait ...' } %>
+    <%= f.button :submit, "Resend confirmation instructions" %>
   </div>
 <% end %>
 
