--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,16 @@
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
-  defaults: { label: false, input_html: { :class => 'transparent' }}) do |f| %>
-
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name,   autofocus: true, required: true, placeholder: 'First name' %>
-    <%= f.input :last_name,                     required: true, placeholder: 'Last name' %>
-    <%= f.input :phone_number,                  required: true, placeholder: 'Phone number' %>
-    <%= f.input :email,                         required: true, placeholder: 'Email' %>
-    <%= f.input :password,                      required: true, placeholder: 'Password' %>
-    <%= f.input :password_confirmation,         required: true, placeholder: 'Password confirmation' %>
+    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.input :password, :required => true %>
+    <%= f.input :password_confirmation, :required => true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", data: { disable_with: 'Please wait ...' } %>
+    <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
 
