--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.input :first_name,   placeholder: 'First name', :autofocus => true %>
+    <%= f.input :last_name,    placeholder: 'Last name' %>
+    <%= f.input :phone_number, placeholder: 'Phone number' %>
+    <%= f.input :email, :required => true %>
     <%= f.input :password, :required => true %>
     <%= f.input :password_confirmation, :required => true %>
   </div>
