Update Onboarding password_form logic

--- a/app/views/onboardings/_password_form.html.erb
+++ b/app/views/onboardings/_password_form.html.erb
@@ -9,9 +9,9 @@
   <%= f.input :termination,   as: :hidden %>
   <%= f.input :price,         as: :hidden %>
 
-  <%= f.input :password, error: false, placeholder: 'password', autofocus: true %>
+  <%= f.input :password, placeholder: 'password', autofocus: true %>
 
-  <%= f.input :password_confirmation, error: false, placeholder: 'password_confirmation' %>
+  <%= f.input :password_confirmation, placeholder: 'password_confirmation' %>
 
   <hr>
 
